# cryptocurrencies-app

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
apptrix/: entrypoint.sh  requirements.txt
apptrix/app/: models.py  tasks.py  urls.py  views.py
apptrix/app/migrations/: 0001_initial.py
apptrix/app/templates/: base.html  cryptos.html
apptrix/app/templates/registration/: login.html
apptrix/config/: celery.py  settings.py
project/app/: forms.py  tasks.py  views.py
project/app/migrations/: 0002_alter_cryptocurrency_unique_together_and_more.py
project/app/templates/: base.html
project/app/templates/registration/: login.html  register.html
project/config/: settings.py
